--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,6 @@ h1 {
 
 h2 {
     font-size: 18px;
-    margin-top: 32px;
 }
 
 h3 {
@@ -44,6 +43,10 @@ h3 {
 
 h4 {
     font-size: 12px;
+}
+
+section {
+    margin-top: calc(var(--base-spacing) * 2);
 }
 
 strong, header a {
